--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                        <div class="row">
                         <div class="col-md-2 skilltitle">Angular/Node Js</div>
                         <div class="col-md-8">
                             <div class="progress">
