--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="#top"></div>
     <section id="home">
         <div class="banner-container">
-            <img src="images/banner-bg.jpg" alt="banner" />
+            <img src="https://drive.google.com/file/d/1KjtugZEI6hJMCeL7HK82fGfiBENT-VuW/view" alt="banner" />
             <div class="container banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
