--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="col-sm-6">
                     <h2>Programming <strong>Skills</strong></h2>
                     <p class="mrgBtm20">
-                        It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past 7 years and am always ready for new challenges.
+                        It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past  years and am always ready for new challenges.
                 
                     </p>
                     <div class="row">
