--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-    <title>Sreekanth Muthineni - Single page website</title>
+    <title>Srikanth Muthineni - Single page website</title>
     <meta name="description" content="">
     <meta name="author" content="WebThemez">
     <!--[if lt IE 9]>
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top logo"><b>Sreekanth Profile</b></a>
+                    <a href="#" class="navbar-brand scroll-top logo"><b>Srikanth Profile</b></a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
